@@ -1,25 +1,0 @@
-{
-	"$schema": "https://json-schema.org/draft/2019-09/schema",
-	"description": "List of additional options, that aren't covered with the structured data definitions.",
-	"type": "object",
-	"properties": {
-		"optionName": {
-			"description": "Option name",
-			"type": "string"
-		},
-		"optionValue": {
-			"description": "Option value",
-			"type": "string"
-		},
-		"optionDescription": {
-			"description": "Option description",
-			"type": "string"
-		}
-	},
-	"additionalProperties": false,
-	"required": [
-		"optionName",
-		"optionValue",
-		"optionDescription"
-	]
-}
